[project]
name = "chronos"
version = "0.1.0"
description = "Agentic Memory and Scheduling Anchor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
